26.2 support